remaining components updated

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -12,9 +12,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Element      | Property         | Color token       |
 | ------------ | ---------------- | ----------------- |
-| Table header | background-color | `$layer`          |
+| Table header | background-color | `$layer` \*       |
 | Title        | text-color       | `$text-primary`   |
 | Description  | text-color       | `$text-secondary` |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -26,15 +31,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Column header
 
-| State   | Property         | Color token            |
-| ------- | ---------------- | ---------------------- |
-| Enabled | background-color | `$layer-accent`        |
-|         | text-color       | `$text-primary`        |
-|         | svg              | `$icon-primary`        |
-| Hover   | background-color | `$layer-accent-hover`  |
-|         | text-color       | `$text-primary`        |
-| Focus   | border           | `$focus`               |
-| Active  | background-color | `$layer-accent-active` |
+| State   | Property         | Color token               |
+| ------- | ---------------- | ------------------------- |
+| Enabled | background-color | `$layer-accent` \*        |
+|         | text-color       | `$text-primary`           |
+|         | svg              | `$icon-primary`           |
+| Hover   | background-color | `$layer-accent-hover` \*  |
+|         | text-color       | `$text-primary`           |
+| Focus   | border           | `$focus`                  |
+| Active  | background-color | `$layer-accent-active` \* |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -46,23 +56,28 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Row
 
-| State            | Property         | Color token               |
-| ---------------- | ---------------- | ------------------------- |
-| Enabled          | background-color | `$layer`                  |
-|                  | text-color       | `$text-secondary`         |
-|                  | border-bottom    | `$border-subtle`          |
-|                  | svg              | `$icon-secondary`         |
-| Hover            | background-color | `$layer-hover`            |
-|                  | text-color       | `$text-primary`           |
-| Focus            | border           | `$focus`                  |
-| Selected         | background-color | `$layer-selected`         |
-|                  | text-color       | `$text-primary`           |
-|                  | border-bottom    | `$border-subtle-selected` |
-|                  | svg              | `$icon-primary`           |
-| Selected + hover | background-color | `$layer-selected-hover`   |
-| Expanded         | background-color | `$layer`                  |
-|                  | svg              | `$icon-primary`           |
-| Zebra            | background-color | `$layer-accent`           |
+| State            | Property         | Color token                 |
+| ---------------- | ---------------- | --------------------------- |
+| Enabled          | background-color | `$layer` \*                 |
+|                  | text-color       | `$text-secondary`           |
+|                  | border-bottom    | `$border-subtle` \*         |
+|                  | svg              | `$icon-secondary`           |
+| Hover            | background-color | `$layer-hover` \*           |
+|                  | text-color       | `$text-primary`             |
+| Focus            | border           | `$focus`                    |
+| Selected         | background-color | `$layer-selected` \*        |
+|                  | text-color       | `$text-primary`             |
+|                  | border-bottom    | `$border-subtle-selected`\* |
+|                  | svg              | `$icon-primary`             |
+| Selected + hover | background-color | `$layer-selected-hover` \*  |
+| Expanded         | background-color | `$layer` \*                 |
+|                  | svg              | `$icon-primary`             |
+| Zebra            | background-color | `$layer-accent` \*          |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -76,9 +91,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Element     | Property                                                                                    | Color token |
 | ----------- | ------------------------------------------------------------------------------------------- | ----------- |
-| Toolbar     | background-color                                                                            | `$layer`    |
+| Toolbar     | background-color                                                                            | `$layer` \* |
 | Icon button | See [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button)     |             |
 | Button      | See [primary button](https://carbondesignsystem.com/components/button/style#primary-button) |             |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
