--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -10,14 +10,19 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Date input
 
-| Element            | Property         | Color token       |
-| ------------------ | ---------------- | ----------------- |
-| Label              | text-color       | `$text-secondary` |
-| Field              | background-color | `$field`          |
-|                    | border-bottom    | `$border-strong`  |
-| Field text         | text-color       | `$text-primary`   |
-| Field text: prompt | text-color       | `$text-helper`    |
-| Calendar icon      | svg              | `$icon-primary`   |
+| Element            | Property         | Color token         |
+| ------------------ | ---------------- | ------------------- |
+| Label              | text-color       | `$text-secondary`   |
+| Field              | background-color | `$field` \*         |
+|                    | border-bottom    | `$border-strong` \* |
+| Field text         | text-color       | `$text-primary`     |
+| Field text: prompt | text-color       | `$text-helper`      |
+| Calendar icon      | svg              | `$icon-primary`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <br />
 
@@ -49,24 +54,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <Caption>Examples of date picker input states</Caption>
 
-**Active:** Placeholder text should remain when the user clicks into the text
-input and gets a cursor. Once the user starts typing the hint text is replaced
-with the user input text.
-
-**Error:** Error messages appear below the input field and are always present
-while invalid.
-
-**Disabled:** Disabled state should have a `.not-allowed` cursor on hover.
-
 ### Calendar menu
 
 | Element             | Property         | Color token                      |
 | ------------------- | ---------------- | -------------------------------- |
-| Calendar            | background-color | `$layer`                         |
+| Calendar            | background-color | `$layer` \*                      |
 | Calendar menu       | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.2)` |
 | Today               | text-color       | `$link-01`                       |
 | Day                 | text-color       | `$text-primary`                  |
-| Day: hover          | background-color | `$layer-hover`                   |
+| Day: hover          | background-color | `$layer-hover` \*                |
 | Day: focus          | border           | `$focus`                         |
 | Day: selected       | text-color       | `$text-on-color`                 |
 |                     | background-color | `$background-brand`              |
@@ -76,6 +72,11 @@ while invalid.
 | Day: end range      | text-color       | `$text-primary`                  |
 |                     | border           | `$focus`                         |
 | Day: next month day | text-color       | `$text-secondary`                |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={12}>
