--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -13,11 +13,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Label          | text-color                                                                                      | `$text-primary`   |
 | Description    | text-color                                                                                      | `$text-secondary` |
 | File name      | text-color                                                                                      | `$text-primary`   |
-| File           | background-color                                                                                | `$field`          |
+| File           | background-color                                                                                | `$field` \*       |
 | Close icon     | svg                                                                                             | `$icon-primary`   |
 | Drop container | border                                                                                          | `$border-strong`  |
 | Drop text      | text-color                                                                                      | `$link-primary`   |
 | Button         | See [primary button](https://www.carbondesignsystem.com/components/button/style#primary-button) |                   |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
