--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -11,15 +11,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Refer to the [button](/components/button/style) for primary and secondary button
 styling in the transactional modal.
 
-| Class                        | Property         | Color token         |
-| ---------------------------- | ---------------- | ------------------- |
-| `.bx--modal-container`       | background-color | `$layer`            |
-| `.bx--modal-header__label`   | text color       | `$text-secondary`   |
-| `.bx--modal-header__heading` | text color       | `$text-primary`     |
-| `.bx--modal-content`         | text color       | `$text-primary`     |
-| `.bx--modal-close__icon`     | fill             | `$icon-primary`     |
-| `.bx--modal-close:hover`     | background-color | `$background-hover` |
-| Overlay                      | color            | `$overlay`          |
+| Class                        | Property         | Color token       |
+| ---------------------------- | ---------------- | ----------------- |
+| `.bx--modal-container`       | background-color | `$layer` \*       |
+| `.bx--modal-header__label`   | text color       | `$text-secondary` |
+| `.bx--modal-header__heading` | text color       | `$text-primary`   |
+| `.bx--modal-content`         | text color       | `$text-primary`   |
+| `.bx--modal-close__icon`     | fill             | `$icon-primary`   |
+| `.bx--modal-close:hover`     | background-color | `$layer-hover` \* |
+| Overlay                      | color            | `$overlay`        |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ## Typography
 
