--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -8,12 +8,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                          | Property         | Color token       |
-| ------------------------------ | ---------------- | ----------------- |
-| `.bx--pagination`              | background-color | `$layer`          |
-| `.bx--pagination`              | border-top       | `$border-subtle`  |
-| `.bx--pagination__text`        | text color       | `$text-secondary` |
-| `.bx--pagination__button-icon` | fill             | `$icon-primary`   |
+| Class                          | Property         | Color token         |
+| ------------------------------ | ---------------- | ------------------- |
+| `.bx--pagination`              | background-color | `$layer` \*         |
+| `.bx--pagination`              | border-top       | `$border-subtle` \* |
+| `.bx--pagination__text`        | text color       | `$text-secondary`   |
+| `.bx--pagination__button-icon` | fill             | `$icon-primary`     |
 
 ## Typography
 
