--- a/src/pages/components/popover/style.mdx
+++ b/src/pages/components/popover/style.mdx
@@ -9,9 +9,13 @@ tabs: ['Usage', 'Style']
 
 | Element   | Property         | Color token           |
 | --------- | ---------------- | --------------------- |
-| Container | background-color | `$layer-01`           |
-|           | background-color | `$layer-02`           |
+| Container | background-color | `$layer` \*           |
 |           | background-color | `$background-inverse` |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
