--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -19,9 +19,14 @@ outlined circle.
 | `.bx--progress-step--complete svg`                          | fill             | `$interactive`        |
 | `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`        |
 | `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$border-interactive` |
-| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$border-subtle`      |
+| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$border-subtle` \*   |
 | `.bx--progress-label`                                       | text color       | `$text-primary`       |
 | `.bx--progress-optional`                                    | text color       | `$text-secondary`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ### Interactive states
 
