--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -14,8 +14,8 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 | Class                            | Property         | Color token         |
 | -------------------------------- | ---------------- | ------------------- |
-| `.bx--search-input`              | background-color | `$field`            |
-| `.bx--search-input`              | border-bottom    | `$border-strong`    |
+| `.bx--search-input`              | background-color | `$field` \*         |
+| `.bx--search-input`              | border-bottom    | `$border-strong` \* |
 | `.bx--search-input`              | text color       | `$text-primary`     |
 | `.bx--search-input::placeholder` | text color       | `$text-placeholder` |
 | `.bx--search-magnifier`          | fill             | `$icon-secondary`   |
@@ -33,7 +33,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Class                            | Property         | Color token      |
 | -------------------------------- | ---------------- | ---------------- |
 | `.bx--search-input:focus`        | border           | `$focus`         |
-| `.bx--search-input:disabled`     | background-color | `$field`         |
+| `.bx--search-input:disabled`     | background-color | `$field` \*      |
 | `.bx--search-input:disabled`     | border-bottom    | transparent      |
 | `.bx--search-input:disabled`     | text color       | `$text-disabled` |
 | `.bx--search-magnifier:disabled` | fill             | `$icon-disabled` |
