--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -8,12 +8,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                  | Property      | Color token       |
-| -------------------------------------- | ------------- | ----------------- |
-| `.bx--structured-list-th`              | text color    | `$text-primary`   |
-| `.bx--structured-list-td`              | text color    | `$text-secondary` |
-| `.bx--structured-list-row--header-row` | border-bottom | `$border-subtle`  |
-| `.bx--structured-list-row`             | border-bottom | `$border-subtle`  |
+| Class                                  | Property      | Color token         |
+| -------------------------------------- | ------------- | ------------------- |
+| `.bx--structured-list-th`              | text color    | `$text-primary`     |
+| `.bx--structured-list-td`              | text color    | `$text-secondary`   |
+| `.bx--structured-list-row--header-row` | border-bottom | `$border-subtle` \* |
+| `.bx--structured-list-row`             | border-bottom | `$border-subtle` \* |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ### Interactive states
 
