--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -14,8 +14,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Field text       | text color       | `$text-primary`     |
 | Placeholder text | text color       | `$text-placeholder` |
 | Helper text      | text color       | `$text-helper`      |
-| Field            | background-color | `$field`            |
-|                  | border-bottom    | `$border-strong`    |
+| Field            | background-color | `$field` \*         |
+|                  | border-bottom    | `$border-strong` \* |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
@@ -33,7 +38,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Invalid  | Field         | outline       | `$support-error` |
 |          | Error message | text color    | `$text-error`    |
 |          | Warning icon  | svg           | `$support-error` |
-| Disabled | Field         | background    | `$field`         |
+| Disabled | Field         | background    | `$field` \*      |
 |          | Field         | border-bottom | transparent      |
 |          | Field text    | text color    | `$text-disabled` |
 
