--- a/src/pages/components/tile/style.mdx
+++ b/src/pages/components/tile/style.mdx
@@ -10,12 +10,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class          | Property         | Color token       |
 | -------------- | ---------------- | ----------------- |
-| Tile           | background-color | `$layer`          |
+| Tile           | background-color | `$layer` \*       |
 | Tile: focus    | border           | `$focus`          |
-| Tile: hover    | background-color | `$layer-hover`    |
+| Tile: hover    | background-color | `$layer-hover` \* |
 | Tile: selected | border           | `$border-inverse` |
 | Chevron icon   | svg              | `$icon-primary`   |
 | Checkmark icon | svg              | `$icon-primary`   |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ## Structure
 
