--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -14,16 +14,21 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Field text         | text-color       | `$text-primary`              |
 | Field text: prompt | text-color       | `$text-helper`               |
 | Helper text        | text-color       | `$text-helper`               |
-| Field              | background-color | `$field`                     |
-|                    | border-bottom    | `$border-strong`             |
+| Field              | background-color | `$field` \*                  |
+|                    | border-bottom    | `$border-strong` \*          |
 | Chevron icon       | svg              | `$icon-primary`              |
 | Menu option        | text-color       | `$text-secondary`            |
-|                    | background-color | `$layer`                     |
-|                    | border-top       | `$border-subtle`             |
+|                    | background-color | `$layer` \*                  |
+|                    | border-top       | `$border-subtle` \*          |
 | Menu               | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
 | Checkbox icon      | background-color | `$icon-primary`              |
 |                    | check            | `$icon-inverse`              |
 |                    | border           | `$icon-primary`              |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={12}>
@@ -42,24 +47,29 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | State          | Element         | Property         | Color token           |
 | -------------- | --------------- | ---------------- | --------------------- |
 | Focus          | Field           | border           | `$focus`              |
-| Hover          | Field           | background-color | `$field-hover`        |
-|                | Menu option     | background-color | `$layer-hover`        |
+| Hover          | Field           | background-color | `$field-hover` \*     |
+|                | Menu option     | background-color | `$layer-hover` \*     |
 |                | Menu option     | text-color       | `$text-primary`       |
 | Invalid        | Error icon      | svg              | `$support-error`      |
 |                | Field           | border           | `$support-error`      |
 |                | Error message   | text-color       | `$text-error`         |
 | Warning        | Warning message | text-color       | `$text-primary`       |
 |                | Warning icon    | svg              | `$support-warning`    |
-| Active         | Menu option     | background-color | `$layer-active`       |
-| Selected       | Menu option     | background-color | `$layer-selected`     |
+| Active         | Menu option     | background-color | `$layer-active` \*    |
+| Selected       | Menu option     | background-color | `$layer-selected` \*  |
 |                | Menu option     | checkmark        | `$icon-primary`       |
 | Multi-selected | Tag             | background-color | `$background-inverse` |
 |                | Tag             | text-color       | `$text-inverse`       |
-| Disabled       | Field           | background-color | `$field`              |
+| Disabled       | Field           | background-color | `$field` \*           |
 |                | Field           | border-bottom    | transparent           |
 |                | Field           | text-color       | `$text-disabled`      |
 |                | Label           | text-color       | `$text-disabled`      |
 |                | Chevron icon    | svg              | `$icon-disabled`      |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={12}>
@@ -83,22 +93,27 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Inline dropdown
 
-| State    | Element       | Property         | Color token       |
-| -------- | ------------- | ---------------- | ----------------- |
-| Enabled  | Field         | background-color | transparent       |
-|          | Field text    | text-color       | `$text-primary`   |
-|          | Chevron icon  | svg              | `$icon-primary`   |
-|          | Menu option   | text-color       | `$text-secondary` |
-|          | Menu option   | background-color | `$layer`          |
-| Hover    | Field         | background-color | `$field-hover`    |
-|          | Menu option   | background-color | `$layer-hover`    |
-|          | Menu option   | text-color       | `$text-primary`   |
-| Active   | Menu option   | background-color | `$layer-active`   |
-| Selected | Menu option   | background-color | `$layer-selected` |
-|          | Menu option   | checkmark        | `$icon-primary`   |
-| Invalid  | Field         | border           | `$support-error`  |
-|          | Error message | text-color       | `$text-error`     |
-|          | Error icon    | svg              | `$support-error`  |
+| State    | Element       | Property         | Color token          |
+| -------- | ------------- | ---------------- | -------------------- |
+| Enabled  | Field         | background-color | transparent          |
+|          | Field text    | text-color       | `$text-primary`      |
+|          | Chevron icon  | svg              | `$icon-primary`      |
+|          | Menu option   | text-color       | `$text-secondary`    |
+|          | Menu option   | background-color | `$layer` \*          |
+| Hover    | Field         | background-color | `$field-hover` \*    |
+|          | Menu option   | background-color | `$layer-hover` \*    |
+|          | Menu option   | text-color       | `$text-primary`      |
+| Active   | Menu option   | background-color | `$layer-active` \*   |
+| Selected | Menu option   | background-color | `$layer-selected` \* |
+|          | Menu option   | checkmark        | `$icon-primary`      |
+| Invalid  | Field         | border           | `$support-error`     |
+|          | Error message | text-color       | `$text-error`        |
+|          | Error icon    | svg              | `$support-error`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={12}>
