--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -9,11 +9,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                       | Property | Color token           |
 | --------------------------- | -------- | --------------------- |
-| `.bx--loading__background`  | stroke   | `$border-subtle`      |
+| `.bx--loading__background`  | stroke   | `$border-subtle` \*   |
 | `.bx--loading__stroke`      | stroke   | `$border-interactive` |
 | `.bx--inline-loading__text` | color    | `$text-secondary`     |
 | `status: finished`          | svg      | `$support-success`    |
 | `status: finished`          | svg      | `$support-error`      |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <Row>
 <Column colLg={8}>
