--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -8,15 +8,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                 | Property      | Color token      |
-| --------------------- | ------------- | ---------------- |
-| `.bx--select-input`   | background    | `$field`         |
-| `.bx--select-input`   | border-bottom | `$border-strong` |
-| `.bx--select--inline` | background    | transparent      |
-| `.bx--label`          | text color    | `$text-primary`  |
-| `.bx--select-input`   | text color    | `$text-primary`  |
-| `.bx--select--inline` | text color    | `$icon-primary`  |
-| `.bx--select__arrow`  | fill          | `$icon-primary`  |
+| Class                 | Property      | Color token         |
+| --------------------- | ------------- | ------------------- |
+| `.bx--select-input`   | background    | `$field` \*         |
+| `.bx--select-input`   | border-bottom | `$border-strong` \* |
+| `.bx--select--inline` | background    | transparent         |
+| `.bx--label`          | text color    | `$text-primary`     |
+| `.bx--select-input`   | text color    | `$text-primary`     |
+| `.bx--select--inline` | text color    | `$icon-primary`     |
+| `.bx--select__arrow`  | fill          | `$icon-primary`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 <div className="image--fixed">
 
@@ -33,7 +38,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--select-input:focus`         | border        | `$focus`         |
 | `.bx--select-input[data-invalid]` | border        | `$support-error` |
 | `.bx--form-requirement`           | text color    | `$support-error` |
-| `.bx--select-input:disabled`      | background    | `$field`         |
+| `.bx--select-input:disabled`      | background    | `$field` \*      |
 | `.bx--select-input:disabled`      | border-bottom | transparent      |
 | `.bx--select-input:disabled`      | text color    | `$text-disabled` |
 
