--- a/src/pages/components/slider/style.mdx
+++ b/src/pages/components/slider/style.mdx
@@ -8,13 +8,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                       | Property         | Color token       |
-| --------------------------- | ---------------- | ----------------- |
-| `.bx--slider__thumb`        | fill             | `$icon-primary`   |
-| `.bx--slider__filled-track` | background-color | `$border-inverse` |
-| `.bx--slider__track`        | background-color | `$border-subtle`  |
-| `.bx--label`                | text color       | `$text-secondary` |
-| `.bx--slider__range-label`  | text color       | `$text-primary`   |
+| Class                       | Property         | Color token         |
+| --------------------------- | ---------------- | ------------------- |
+| `.bx--slider__thumb`        | fill             | `$icon-primary`     |
+| `.bx--slider__filled-track` | background-color | `$border-inverse`   |
+| `.bx--slider__track`        | background-color | `$border-subtle` \* |
+| `.bx--label`                | text color       | `$text-secondary`   |
+| `.bx--slider__range-label`  | text color       | `$text-primary`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ### Interactive states
 
