--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -66,7 +66,7 @@ do you gain by collecting this information?
     }}
   >{`
   <Form>
-  <div style={{marginBottom: '2rem'}}>
+  <Stack gap={7}>
     <TextInput
       helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
       id="test2"
@@ -74,8 +74,6 @@ do you gain by collecting this information?
       labelText="Text input label"
       placeholder="Placeholder text"
     />
-  </div>
-  <div style={{marginBottom: '2rem'}}>
   <TextArea
     cols={50}
     helperText="Optional helper text here; if message is more than one line text should wrap (~100 character count maximum)"
@@ -85,8 +83,6 @@ do you gain by collecting this information?
     placeholder="Placeholder text"
     rows={4}
   />
-  </div>
-  <div style={{marginBottom: '2rem'}}>
     <Select
       defaultValue="placeholder-item"
       id="select-1"
@@ -106,7 +102,6 @@ do you gain by collecting this information?
         value="option-3"
       />
     </Select>
-  </div>
   <Button
     kind="primary"
     tabIndex={0}
@@ -114,6 +109,7 @@ do you gain by collecting this information?
   >
     Submit
   </Button>
+  </Stack>
 </Form>
   `}</ComponentVariant>
 </ComponentDemo>
