--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -13,6 +13,17 @@ between groups of information that appear within the same context.
 
 </PageDescription>
 
+<InlineNotification>
+
+**V11 updates:** the following are the major updates made to tabs in v11.
+
+- Tab variant names have been updated to _Line tabs_ and _Contained tabs_
+- Three new style modifiers—tabs with icons, icon-only tabs, and secondary
+  labels
+- Tabs with auto-width alignment
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
