--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -1,16 +1,14 @@
 ---
 title: Guide
 description:
-  The design transition from v10 to v11 includes updates and additions to
-  components, color tokens, theming, and introduces beta kits to experiment
-  with.
+The transition from v10 to v11 includes updates and additions to color tokens, theming, size naming, and new components.
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
 <PageDescription>
 
 The transition from v10 to v11 includes updates and additions to color tokens,
-theming, and introduces beta kits to experiment with.
+theming, size naming, and new components.
 
 </PageDescription>
 
@@ -31,9 +29,18 @@ theming, and introduces beta kits to experiment with.
 
 - Updated existing color token names to better reflect their usage
 - Updated layer styles with new color tokens
-- Updated text styles with new color tokens
-- Removal of light variants (in favor of new layer and contextual token sets)
+- Updated text styles with new tokens names
+- Removal of `light` variants (in favor of new layer and contextual token sets)
 
+### Kit migration
+
+| Design tool                          | V11              | Migration strategy                                                                                                                                                         |
+| ------------------------------------ | ---------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Sketch](/designing/kits/sketch)     | Update available | The same Sketch Cloud libraries that were used in v10 have been updated to include the v11 changes. Do not accept the library updated until you are ready to work in v11.  |
+| [Figma](/designing/kits/figma)       | TBD              | TBD                                                                                                                                                                        |
+| [Adobe XD](/designing/kits/adobe-xd) | TBD              | TBD                                                                                                                                                                        |
+
+ <!---
 ### v11 Beta kit
 
 Try out the v11 Beta Sketch kit that has been updated to reflect our color token
@@ -70,6 +77,8 @@ Beta kit is available in the White and Gray 100 themes.
 </ResourceCard>
 </Column>
 </Row>
+
+--->
 
 ## Components
 
