--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -8,9 +8,9 @@ tabs: ['Overview', 'Design', 'Develop']
 
 <PageDescription>
 
-Ready to make the migration to Carbon v11 Beta? There are breaking changes along
-with net new features that your product can now consume. Getting started with
-Carbon has never been easier!
+Ready to make the migration to Carbon v11? There are breaking changes along with
+net new features that your product can now consume. Getting started with Carbon
+has never been easier!
 
 </PageDescription>
 
@@ -43,8 +43,8 @@ use.
 - **Sass modules:** Carbon styles have been updated to use its own dedicated
   package and is transitioning to Sass modules.
 - **Theming:** New support for inline theming and light or dark modes.
-- **Design kit:** A new v11 Beta kit has been created with color token updates
-  for testing purposes.
+- **Design kit:** The Sketch theme libraries have been updated to include all
+  v11 updates. Other design tools may have a rolling update to come.
 - **Components:** A new one-package install along with new components and API
   updates.
 - **Grid:** New CSS Grid support to make it easier to build layouts.
