--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -1,7 +1,8 @@
 ---
 title: Guide
 description:
-The transition from v10 to v11 includes updates and additions to color tokens, theming, and introduces beta kits to experiment with.
+  The transition from v10 to v11 includes updates and additions to color tokens,
+  theming, and introduces beta kits to experiment with.
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
