--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -14,6 +14,15 @@ main variants of notifications are toast notifications and inline notifications.
 
 </PageDescription>
 
+<InlineNotification>
+
+V11 update: Toast notifications have been refactored to now allow interactive
+content in them, like links and buttons. To support the usecase of having a
+toast with or without interactive content, we have introduced two types of toast
+notifications—polite and assertive.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -61,8 +70,7 @@ product teams also support banners and notification centers.
       id: 'inline',
       label: 'Inline notification',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="toast"
     knobs={{
@@ -77,8 +85,7 @@ product teams also support banners and notification centers.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
-    }}
-  >{`
+    }}>{`
     <div>
       <ToastNotification
         caption="00:00:00 AM"
@@ -103,8 +110,7 @@ product teams also support banners and notification centers.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
-    }}
-  >{`
+    }}>{`
   <div>
     <InlineNotification
       kind="info"
